--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-  <title>Ninja Weather</title>
+  <title>Weather</title>
 </head>
 <body>
   <div class="container my-5 mx-auto">
-    <h1 class="text-muted text-center my-4">NinjaWeather</h1>
+    <h1 class="text-muted text-center my-4">Weather App</h1>
 
     <form action="" class="change-location my-4 text-center text-muted">
       <label for="city">Enter a location for weather information</label>
@@ -19,7 +19,7 @@
      <img src="https://via.placeholder.com/400x300" class="time card-img-top">
      <div class="icon bg-light mx-auto text-center">
        <!-- icon -->
-       
+       <img src="" alt="">
      </div>
      <div class="text-muted text-uppercase text-center details">
        <h5 class="my-3">City name</h5>
